fb: make it easier to run when vsync is not available

Does a ioctl(KWIN_FB_NO_VSYNC) call so that if it fails, we get to fall
back to the timer-based approach.

BUG: 436053